# phys_15C_lab_proj

./: .gitignore  Cargo.toml  Spread them cheeks Spectrum - 5 Sec SS.csv
src/: decoder.rs  encoder.rs  lib.rs  main.rs  spread_spectrum_decoder.rs  spread_spectrum_encoder.rs
tests/: integration_test.rs
verification/: bitstream_verify.rkt  decoder_threshold_verify.rkt  decoder_verify.rkt  domain_verify.rkt  encoder_rosette.rkt  encoder_verify.rkt  end_to_end_verify.rkt  failure_catalog.rkt  failure_report.rkt  model_common.rkt  run_all.sh
visuals/: Transform Domain Coefficient Embeddding Data - Sheet1.csv  audio_visualization.ipynb  wm_summary.csv
visuals/.ipynb_checkpoints/: test_visualization-checkpoint.py
web/: README.md  index.html  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  wasm.ts
web/src/components/: AudioRecorder.tsx  BitDiagnostics.tsx  BitSequenceVisualization.tsx  Decoder.tsx  Encoder.tsx  FrequencyDomainVisualization.tsx  WaveformVisualization.tsx
web/src/utils/: audioUtils.ts
